✨ feat: add success message for quote sent for signature

--- a/frontend/src/locales/en/translation.json
+++ b/frontend/src/locales/en/translation.json
@@ -333,6 +333,7 @@
             },
             "messages": {
                 "sendSignatureError": "Failed to send quote for signature",
+                "sendSignatureSuccess": "Quote sent for signature successfully",
                 "invoiceCreated": "Invoice created successfully from quote",
                 "invoiceCreateError": "Failed to create invoice from quote"
             }
