✨ feat: add currency label and select component translations to French locale

--- a/frontend/src/locales/fr/translation.json
+++ b/frontend/src/locales/fr/translation.json
@@ -62,6 +62,9 @@
                     "label": "Numéro de TVA",
                     "placeholder": "Saisir le numéro de TVA (ex: FR12345678901)"
                 },
+                "currency": {
+                    "label": "Devise"
+                },
                 "foundedAt": {
                     "label": "Date de création",
                     "placeholder": "Sélectionner la date de création"
@@ -171,6 +174,9 @@
                 "vat": {
                     "label": "Numéro de TVA",
                     "placeholder": "Saisir le numéro de TVA (ex: FR12345678901)"
+                },
+                "currency": {
+                    "label": "Devise"
                 },
                 "foundedAt": {
                     "label": "Date de création",
@@ -828,7 +834,6 @@
                 },
                 "currency": {
                     "label": "Devise",
-                    "placeholder": "Sélectionner votre devise",
                     "description": "Devise par défaut pour les factures et devis",
                     "errors": {
                         "required": "La devise est requise",
@@ -1197,5 +1202,12 @@
     "unavailable": {
         "title": "Indisponible sur Mobile/Tablet",
         "description": "Cette fonctionnalité n'est disponible que sur les appareils de bureau pour une expérience optimale."
+    },
+    "component": {
+        "currency-select": {
+            "placeholder": "Sélectionner une devise",
+            "searchPlaceholder": "Rechercher des devises...",
+            "noResults": "Aucune devise trouvée"
+        }
     }
 }
