✨ feat: add date field to quotes and invoices translations

--- a/frontend/src/locales/en/translation.json
+++ b/frontend/src/locales/en/translation.json
@@ -1050,6 +1050,7 @@
                 "quoteFor": "Quote For",
                 "validUntil": "Valid Until",
                 "dueDate": "Due Date",
+                "date": "Date",
                 "description": "Description",
                 "quantity": "Quantity",
                 "unitPrice": "Unit Price",
@@ -1065,6 +1066,7 @@
                 "billTo": "Bill To",
                 "quoteFor": "Quote For",
                 "validUntil": "Valid Until",
+                "date": "Date",
                 "dueDate": "Due Date",
                 "description": "Description",
                 "quantity": "Quantity",
