--- a/frontend/src/locales/fr/translation.json
+++ b/frontend/src/locales/fr/translation.json
@@ -1050,6 +1050,7 @@
                 "quoteFor": "Devis pour",
                 "validUntil": "Valide jusqu'au",
                 "dueDate": "Date d'échéance",
+                "date": "Date",
                 "description": "Description",
                 "quantity": "Quantité",
                 "unitPrice": "Prix unitaire",
@@ -1066,6 +1067,7 @@
                 "quoteFor": "Devis pour",
                 "validUntil": "Valide jusqu'au",
                 "dueDate": "Date d'échéance",
+                "date": "Date",
                 "description": "Description",
                 "quantity": "Quantité",
                 "unitPrice": "Prix unitaire",
