✨ feat: add notes field with label and placeholder to invoice and quote sections in French translation

--- a/frontend/src/locales/en/translation.json
+++ b/frontend/src/locales/en/translation.json
@@ -398,6 +398,10 @@
                             "min": "VAT rate must be positive"
                         }
                     }
+                },
+                "notes": {
+                    "label": "Notes",
+                    "placeholder": "Additional notes or terms (optional)"
                 }
             },
             "actions": {
@@ -459,6 +463,10 @@
                             "min": "VAT rate must be positive"
                         }
                     }
+                },
+                "notes": {
+                    "label": "Notes",
+                    "placeholder": "Additional notes or terms (optional)"
                 }
             },
             "actions": {
