✨ feat: update invoice notes field placeholders and labels for consistency in translation

--- a/frontend/src/locales/en/translation.json
+++ b/frontend/src/locales/en/translation.json
@@ -349,7 +349,7 @@
             "form": {
                 "title": {
                     "label": "Title",
-                    "placeholder": "Enter quote title (optional)"
+                    "placeholder": "Enter quote title"
                 },
                 "client": {
                     "label": "Client",
@@ -401,7 +401,7 @@
                 },
                 "notes": {
                     "label": "Notes",
-                    "placeholder": "Additional notes or terms (optional)"
+                    "placeholder": "Additional notes or terms"
                 }
             },
             "actions": {
@@ -414,7 +414,7 @@
             "form": {
                 "title": {
                     "label": "Title",
-                    "placeholder": "Enter quote title (optional)"
+                    "placeholder": "Enter quote title"
                 },
                 "client": {
                     "label": "Client",
@@ -466,7 +466,7 @@
                 },
                 "notes": {
                     "label": "Notes",
-                    "placeholder": "Additional notes or terms (optional)"
+                    "placeholder": "Additional notes or terms"
                 }
             },
             "actions": {
@@ -580,7 +580,7 @@
             "form": {
                 "quote": {
                     "label": "From Quote",
-                    "placeholder": "Select a quote (optional)",
+                    "placeholder": "Select a quote",
                     "errors": {
                         "required": "Please select a quote"
                     }
@@ -629,6 +629,20 @@
                             "min": "VAT rate must be positive"
                         }
                     }
+                },
+                "notes": {
+                    "label": "Notes",
+                    "placeholder": "Additional notes or terms"
+                },
+                "paymentMethod": {
+                    "label": "Payment Method",
+                    "placeholder": "Select payment method",
+                    "description": "Preferred payment method for this quote (e.g., Bank Transfer, Check, etc.)"
+                },
+                "paymentDetails": {
+                    "label": "Payment Details",
+                    "placeholder": "Enter payment details",
+                    "description": "Additional information for payment (e.g., IBAN, instructions, etc.)"
                 }
             },
             "actions": {
@@ -641,7 +655,7 @@
             "form": {
                 "quote": {
                     "label": "From Quote",
-                    "placeholder": "Select a quote (optional)",
+                    "placeholder": "Select a quote",
                     "errors": {
                         "required": "Please select a quote"
                     }
@@ -690,6 +704,20 @@
                             "min": "VAT rate must be positive"
                         }
                     }
+                },
+                "notes": {
+                    "label": "Notes",
+                    "placeholder": "Additional notes or terms"
+                },
+                "paymentMethod": {
+                    "label": "Payment Method",
+                    "placeholder": "Select payment method",
+                    "description": "Preferred payment method for this quote (e.g., Bank Transfer, Check, etc.)"
+                },
+                "paymentDetails": {
+                    "label": "Payment Details",
+                    "placeholder": "Enter payment details",
+                    "description": "Additional information for payment (e.g., IBAN, instructions, etc.)"
                 }
             },
             "actions": {
