--- a/frontend/src/locales/fr/translation.json
+++ b/frontend/src/locales/fr/translation.json
@@ -349,7 +349,7 @@
             "form": {
                 "title": {
                     "label": "Titre",
-                    "placeholder": "Saisir le titre du devis (optionnel)"
+                    "placeholder": "Saisir le titre du devis"
                 },
                 "client": {
                     "label": "Client",
@@ -401,7 +401,7 @@
                 },
                 "notes": {
                     "label": "Notes",
-                    "placeholder": "Saisir des notes ou conditions supplémentaires (optionnel)"
+                    "placeholder": "Saisir des notes ou conditions supplémentaires"
                 }
             },
             "actions": {
@@ -414,7 +414,7 @@
             "form": {
                 "title": {
                     "label": "Titre",
-                    "placeholder": "Saisir le titre du devis (optionnel)"
+                    "placeholder": "Saisir le titre du devis"
                 },
                 "client": {
                     "label": "Client",
@@ -466,7 +466,7 @@
                 },
                 "notes": {
                     "label": "Notes",
-                    "placeholder": "Saisir des notes ou conditions supplémentaires (optionnel)"
+                    "placeholder": "Saisir des notes ou conditions supplémentaires"
                 }
             },
             "actions": {
@@ -580,7 +580,7 @@
             "form": {
                 "quote": {
                     "label": "À partir d'un devis",
-                    "placeholder": "Sélectionner un devis (optionnel)",
+                    "placeholder": "Sélectionner un devis",
                     "errors": {
                         "required": "Veuillez sélectionner un devis"
                     }
@@ -629,6 +629,20 @@
                             "min": "Le taux de TVA doit être positif"
                         }
                     }
+                },
+                "notes": {
+                    "label": "Notes",
+                    "placeholder": "Saisir des notes ou conditions supplémentaires"
+                },
+                "paymentMethod": {
+                    "label": "Méthode de paiement",
+                    "placeholder": "Sélectionner la méthode de paiement",
+                    "description": "La méthode de paiement préférée pour ce devis (Ex: Virement bancaire, Chèque, etc.)"
+                },
+                "paymentDetails": {
+                    "label": "Détails de paiement",
+                    "placeholder": "Saisir les détails de paiement",
+                    "description": "Informations supplémentaires pour le paiement (Ex: IBAN, instructions, etc.)"
                 }
             },
             "actions": {
@@ -641,7 +655,7 @@
             "form": {
                 "quote": {
                     "label": "À partir d'un devis",
-                    "placeholder": "Sélectionner un devis (optionnel)",
+                    "placeholder": "Sélectionner un devis",
                     "errors": {
                         "required": "Veuillez sélectionner un devis"
                     }
@@ -690,6 +704,20 @@
                             "min": "Le taux de TVA doit être positif"
                         }
                     }
+                },
+                "notes": {
+                    "label": "Notes",
+                    "placeholder": "Saisir des notes ou conditions supplémentaires"
+                },
+                "paymentMethod": {
+                    "label": "Méthode de paiement",
+                    "placeholder": "Sélectionner la méthode de paiement",
+                    "description": "La méthode de paiement préférée pour ce devis (Ex: Virement bancaire, Chèque, etc.)"
+                },
+                "paymentDetails": {
+                    "label": "Détails de paiement",
+                    "placeholder": "Saisir les détails de paiement",
+                    "description": "Informations supplémentaires pour le paiement (Ex: IBAN, instructions, etc.)"
                 }
             },
             "actions": {
