--- a/frontend/src/locales/fr/translation.json
+++ b/frontend/src/locales/fr/translation.json
@@ -402,6 +402,16 @@
                 "notes": {
                     "label": "Notes",
                     "placeholder": "Saisir des notes ou conditions supplémentaires"
+                },
+                "paymentMethod": {
+                    "label": "Méthode de paiement",
+                    "placeholder": "Sélectionner la méthode de paiement",
+                    "description": "La méthode de paiement préférée pour ce devis (Ex: Virement bancaire, Chèque, etc.)"
+                },
+                "paymentDetails": {
+                    "label": "Détails de paiement",
+                    "placeholder": "Saisir les détails de paiement",
+                    "description": "Informations supplémentaires pour le paiement (Ex: IBAN, instructions, etc.)"
                 }
             },
             "actions": {
@@ -467,6 +477,16 @@
                 "notes": {
                     "label": "Notes",
                     "placeholder": "Saisir des notes ou conditions supplémentaires"
+                },
+                "paymentMethod": {
+                    "label": "Méthode de paiement",
+                    "placeholder": "Sélectionner la méthode de paiement",
+                    "description": "La méthode de paiement préférée pour ce devis (Ex: Virement bancaire, Chèque, etc.)"
+                },
+                "paymentDetails": {
+                    "label": "Détails de paiement",
+                    "placeholder": "Saisir les détails de paiement",
+                    "description": "Informations supplémentaires pour le paiement (Ex: IBAN, instructions, etc.)"
                 }
             },
             "actions": {
