--- a/frontend/src/locales/fr/translation.json
+++ b/frontend/src/locales/fr/translation.json
@@ -782,6 +782,226 @@
             "title": "Facture {{number}} - PDF"
         }
     },
+    "recurringInvoices": {
+        "list": {
+            "title": "Factures récurrentes",
+            "description": "Gérez vos factures récurrentes pour automatiser la facturation",
+            "actions": {
+                "addNew": "Aucune facture récurrente trouvée"
+            }
+        },
+        "emptyState": {
+            "noInvoices": "Aucune facture récurrente pour le moment",
+            "noResults": "Aucune facture récurrente trouvée"
+        },
+        "actions": {
+            "addNew": "Ajouter une nouvelle facture récurrente"
+        },
+        "create": {
+            "title": "Créer une facture récurrente",
+            "form": {
+                "quote": {
+                    "label": "À partir d'un devis",
+                    "placeholder": "Sélectionner un devis"
+                },
+                "client": {
+                    "label": "Client",
+                    "placeholder": "Sélectionner un client",
+                    "errors": {
+                        "required": "Veuillez sélectionner un client"
+                    }
+                },
+                "notes": {
+                    "label": "Notes",
+                    "placeholder": "Saisir des notes ou conditions supplémentaires"
+                },
+                "paymentMethod": {
+                    "label": "Méthode de paiement",
+                    "placeholder": "Sélectionner la méthode de paiement",
+                    "description": "La méthode de paiement préférée pour cette facture récurrente (Ex: Virement bancaire, Chèque, etc.)"
+                },
+                "paymentDetails": {
+                    "label": "Détails de paiement",
+                    "placeholder": "Saisir les détails de paiement",
+                    "description": "Informations supplémentaires pour le paiement (Ex: IBAN, instructions, etc.)"
+                },
+                "recurrenceRule": {
+                    "interval": {
+                        "label": "Intervalle",
+                        "placeholder": "Sélectionner l'intervalle de récurrence",
+                        "description": "Intervalle de récurrence pour la facturation pour l'unité sélectionnée (Ex: 1, 2, 3, etc.)",
+                        "errors": {
+                            "required": "L'intervalle est requis",
+                            "min": "L'intervalle doit être d'au moins 1",
+                            "invalid": "Intervalle invalide"
+                        }
+                    },
+                    "units": {
+                        "label": "Unités",
+                        "placeholder": "Sélectionner l'unité",
+                        "description": "Unités de temps pour l'intervalle (Ex: Jours, Semaines, Mois, Années)",
+                        "errors": {
+                            "required": "L'unité est requises"
+                        }
+                    },
+                    "count": {
+                        "label": "Nombre d'occurrences",
+                        "placeholder": "Saisir le nombre d'occurrences",
+                        "description": "Nombre total de factures à générer (vide pour illimité)"
+                    },
+                    "until": {
+                        "label": "Jusqu'à",
+                        "placeholder": "Sélectionner la date de fin",
+                        "description": "Date jusqu'à laquelle les factures seront générées (vide pour illimité)"
+                    }
+                },
+                "autoSend": {
+                    "label": "Envoi automatique",
+                    "description": "Envoyer automatiquement les factures par email aux clients après leur création"
+                },
+                "items": {
+                    "label": "Articles de la facture",
+                    "addItem": "Ajouter un article",
+                    "description": {
+                        "placeholder": "Description de l'article",
+                        "errors": {
+                            "required": "La description est requise"
+                        }
+                    },
+                    "quantity": {
+                        "placeholder": "Qté",
+                        "unit": "pcs",
+                        "errors": {
+                            "required": "La quantité est requise",
+                            "min": "La quantité doit être d'au moins 1",
+                            "invalid": "Quantité invalide"
+                        }
+                    },
+                    "unitPrice": {
+                        "placeholder": "Prix unitaire",
+                        "errors": {
+                            "required": "Le prix unitaire est requis",
+                            "min": "Le prix unitaire doit être positif",
+                            "invalid": "Prix unitaire invalide"
+                        }
+                    },
+                    "vatRate": {
+                        "placeholder": "TVA %",
+                        "errors": {
+                            "required": "Le taux de TVA est requis",
+                            "min": "Le taux de TVA doit être positif"
+                        }
+                    }
+                }
+            },
+            "actions": {
+                "cancel": "Annuler",
+                "create": "Créer la facture récurrente"
+            }
+        },
+        "edit": {
+            "title": "Modifier la facture récurrente",
+            "form": {
+                "quote": {
+                    "label": "À partir d'un devis",
+                    "placeholder": "Sélectionner un devis"
+                },
+                "client": {
+                    "label": "Client",
+                    "placeholder": "Sélectionner un client",
+                    "errors": {
+                        "required": "Veuillez sélectionner un client"
+                    }
+                },
+                "notes": {
+                    "label": "Notes",
+                    "placeholder": "Saisir des notes ou conditions supplémentaires"
+                },
+                "paymentMethod": {
+                    "label": "Méthode de paiement",
+                    "placeholder": "Sélectionner la méthode de paiement",
+                    "description": "La méthode de paiement préférée pour cette facture récurrente (Ex: Virement bancaire, Chèque, etc.)"
+                },
+                "paymentDetails": {
+                    "label": "Détails de paiement",
+                    "placeholder": "Saisir les détails de paiement",
+                    "description": "Informations supplémentaires pour le paiement (Ex: IBAN, instructions, etc.)"
+                },
+                "recurrenceRule": {
+                    "interval": {
+                        "label": "Intervalle",
+                        "placeholder": "Sélectionner l'intervalle de récurrence",
+                        "description": "Intervalle de récurrence pour la facturation pour l'unité sélectionnée (Ex: 1, 2, 3, etc.)",
+                        "errors": {
+                            "required": "L'intervalle est requis",
+                            "min": "L'intervalle doit être d'au moins 1",
+                            "invalid": "Intervalle invalide"
+                        }
+                    },
+                    "units": {
+                        "label": "Unités",
+                        "placeholder": "Sélectionner l'unité",
+                        "description": "Unités de temps pour l'intervalle (Ex: Jours, Semaines, Mois, Années)",
+                        "errors": {
+                            "required": "L'unité est requises"
+                        }
+                    },
+                    "count": {
+                        "label": "Nombre d'occurrences",
+                        "placeholder": "Saisir le nombre d'occurrences",
+                        "description": "Nombre total de factures à générer (vide pour illimité)"
+                    },
+                    "until": {
+                        "label": "Jusqu'à",
+                        "placeholder": "Sélectionner la date de fin",
+                        "description": "Date jusqu'à laquelle les factures seront générées (vide pour illimité)"
+                    }
+                },
+                "autoSend": {
+                    "label": "Envoi automatique",
+                    "description": "Envoyer automatiquement les factures par email aux clients après leur création"
+                },
+                "items": {
+                    "label": "Articles de la facture",
+                    "addItem": "Ajouter un article",
+                    "description": {
+                        "placeholder": "Description de l'article",
+                        "errors": {
+                            "required": "La description est requise"
+                        }
+                    },
+                    "quantity": {
+                        "placeholder": "Qté",
+                        "unit": "pcs",
+                        "errors": {
+                            "required": "La quantité est requise",
+                            "min": "La quantité doit être d'au moins 1",
+                            "invalid": "Quantité invalide"
+                        }
+                    },
+                    "unitPrice": {
+                        "placeholder": "Prix unitaire",
+                        "errors": {
+                            "required": "Le prix unitaire est requis",
+                            "min": "Le prix unitaire doit être positif",
+                            "invalid": "Prix unitaire invalide"
+                        }
+                    },
+                    "vatRate": {
+                        "placeholder": "TVA %",
+                        "errors": {
+                            "required": "Le taux de TVA est requis",
+                            "min": "Le taux de TVA doit être positif"
+                        }
+                    }
+                }
+            },
+            "actions": {
+                "cancel": "Annuler",
+                "save": "Enregistrer les modifications"
+            }
+        }
+    },
     "dashboard": {
         "title": "Tableau de bord",
         "welcomeMessage": "Bon retour, {{firstname}} !",
@@ -1347,6 +1567,14 @@
             "placeholder": "Sélectionner une devise",
             "searchPlaceholder": "Rechercher des devises...",
             "noResults": "Aucune devise trouvée"
+        }
+    },
+    "common": {
+        "units": {
+            "day": "Jour",
+            "week": "Semaine",
+            "month": "Mois",
+            "year": "Année"
         }
     }
 }
