✨ feat: add currency label translation in French for client notes section

--- a/frontend/src/locales/en/translation.json
+++ b/frontend/src/locales/en/translation.json
@@ -573,6 +573,9 @@
                         "required": "Please select a client"
                     }
                 },
+                "currency": {
+                    "label": "Currency"
+                },
                 "notes": {
                     "label": "Notes",
                     "placeholder": "Additional notes or terms"
